--- a/projetobackend/projetobackend/pom.xml
+++ b/projetobackend/projetobackend/pom.xml
@@ -49,7 +49,12 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>io.swagger.core.v3</groupId>
+            <artifactId>swagger-annotations-jakarta</artifactId>
+            <version>2.2.22</version>
+        </dependency>
+    </dependencies>
 
 	<build>
 		<plugins>
