--- a/projetobackend/projetobackend/src/main/resources/application.properties
+++ b/projetobackend/projetobackend/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 spring.application.name=projetobackend
+
+
+
+spring.datasource.url=jdbc:mysql://edumysql.acesso.rj.senac.br:3306/bdolimpiadagames
+spring.datasource.username=games
+spring.datasource.password=adsgames
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
